namespace CustomLib.Models.Comments
{
    public class CommentUpdate
    {
        public string Text { get; set; } = "";
    }
}
