namespace CustomLib.Models.Users
{
    public class UserCreate : UserUpdate
    {

    }
}
